--- a/sync-client/src/index.css
+++ b/sync-client/src/index.css
@@ -5,6 +5,11 @@
    animation-fill-mode: both;
    }
 
+.token-active {
+  background-color: rgba(255, 255, 0, 0.2); /* jaune pâle */
+  border-radius: 2px;
+}
+
 @keyframes blink {
    0% { opacity: 0 }
    50% { opacity: 1 }
